--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Balzac, Honoré de, 1799-1850. Comédie humaine'
+- GITenberg
 title: Repertory of The Comedie Humaine, Complete, A — Z
 url: http://www.gutenberg.org/ebooks/17635
